# megastar

./: CHANGELOG.md  README.md  megastar.cabal  prog-test.ms  stack.yaml  syntax-test.ms
src/: Main.hs  Megastar.hs
src/Megastar/: IO.hs  Interpreter.hs  Modification.hs  Movement.hs  Tape.hs  Types.hs  Variable.hs
src/Megastar/Interpreter/: Core.hs  Expr.hs  IO.hs  Modification.hs  Movement.hs  Tape.hs  Variable.hs
