name:                megastar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/megastar#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable megastar
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Megastar 
                       Megastar.Movement
                       Megastar.Modification
                       Megastar.Tape
                       Megastar.Types
                       Megastar.IO
                       Megastar.Variable
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, megaparsec, parser-combinators
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
